# utils_tiva

./: .gitignore  CMakeLists.txt
docs/config/: Doxyfile
include/: utils.h  utils_tiva.h
src/: utils.c  utils_tiva.c
test/: CMakeLists.txt
